# vkpace

./: .gitignore  Cargo.toml  README.md  VkLayer_VKPACE_reduce_latency.json.in  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_toml.rs  pnext_find.rs
src/: amd_anti_lag.rs  catch.rs  clock.rs  config.rs  delay_controller.rs  device.rs  dispatch.rs  instance.rs  lib.rs  physical_device.rs  pnext.rs  present_wait.rs  queue.rs  registry.rs  submission_span.rs  telemetry.rs  timestamp_pool.rs  vk_layer.rs
src/entrypoints/: latency.rs  mod.rs  queue.rs  swapchain.rs
src/strategy/: anti_lag.rs  mod.rs
src/strategy/low_latency2/: markers.rs  mod.rs  semaphore_signal.rs  swapchain_monitor.rs
tests/: loader_handshake.rs
tools/vkpace-hud/: Cargo.toml
tools/vkpace-hud/src/: main.rs  parse.rs  reader.rs  state.rs  stats.rs  theme.rs  ui.rs
